
o Standards.IIM

  Disabled debug output for unknown segment markers.

o Stdio.send_file

  Improved support for TLS/SSL; wait for TLS handshake to complete
  before calling the sendfile done callback when sending an empty
  string. This fixes the issue where the connection got closed
  before TLS handshaking was completed, confusing the other side.


Building & Tools
----------------

o Image.SVG

  Fall back to using the unprefixed pkg-config if the arch-prefixed
  doesn't exist.

o Mysql

  Support MariaDB 10.2 headerfiles.

o precompile

  Support precompilation with Pike 8.1 again.

o smartlink

  Fixed multiple issues on Darwin & NetBSD.

o Whitefish

  Use the standard VPATH.

o Yp

  Support using libtirpc. Glibc 2.26 has removed the Sun RPC implementation...


Changes since Pike 8.0.466 (release 10)
----------------------------------------------------------------------

New Features
------------

o Crypto.ECC

  - Added get_point() to Crypto.ECC.Curve.

  - Crypto.ECC.Curve.Point objects can now be compared with equal().

o JWK

  - Added Web.encode_jwk().

  - Added jwk() to signatures (Nettle.Sign, Crypo.RSA, Crypto.ECC.Curve.ECDSA)

  - Added jwk() to Crypto.Hash.HMAC.

  - decode_jwk() on a ECC private key now returns an ECDSA object (and a
    Point object for an ECC public key).

o Standards.PKCS

  Support for decoding PKCS #10 public keys through
  Standard.PKCS.parse_public_key.

Bug fixes
---------

o Protocols.DNS

  Added hooks for controlling error handling in Protocols.DNS.server.

o Protocols.HTTP

  Fixed a memory leak in the HTTP header parser upon receiving
  malformed HTTP headers.

o Protocols.WebSocket

  Fixed a case where the onopen callback would get the wrong argument.

o Search

  Fixes some broken SQL queries causing data corruption.

o Sql.sqlite

  list_fields() now throws an error when used on a non-existent table.

o Stdio.Buffer

  - Some methods (add_int*, input_from, add_padding) did not trigger