@@ -432,7 +432,8 @@ test_do( Image.Image() )
 test_do( Image.Image(100,100) )
 test_do( Image.Image(100,100, Image.Color("red")) )
 test_do( Image.Image(100,100, "red") )
-test_do( Image.Image(100,100, "grey", 128) )
+test_eq( (string)Image.Image(1,1, "grey"), "\276\276\276")
+test_eq( (string)Image.Image(1,1, "grey", 128), "\200\200\200")
 test_do( Image.Image(100,100, "rgb", 11,22,33) )
 test_do( Image.Image(100,100, "cmyk", 10,20,30,40) )
 test_do( Image.Image(100,100, "test") )
@@ -784,7 +785,7 @@ cond( (master()->resolv("Image.JPEG")||([]))->encode,[[
   test_any([[
     object img=Image.Image(100,100)->test(43);
     object img1=Image.JPEG.decode(Image.JPEG.encode(img,(["quality":100])));
-    return img-img1<10;
+    return img-img1<20;
   ]],1)
 ]])
 
