@@ -122,6 +122,11 @@ o Stdio.send_file
   string. This fixes the issue where the connection got closed
   before TLS handshaking was completed, confusing the other side.
 
+o Image
+
+  Creating images with mode "grey" now works as documented,
+  e.g. Image.Image(10,10,"grey",123);
+
 
 Building & Tools
 ----------------
